# sandbox_ai

./: README.md
metrics/: .env.example  .gitignore  AIRFLOW_SETUP_INSTRUCTIONS.md  CLEANUP_GUIDE.md  METRICS_GUIDE.md  README.md  configure_philips.py  fix_rate_limit.py  github_metrics_dashboard.html  monitor_synergy_metrics.py  philips_github_metrics_dag.py  philips_quick_start.py  pyproject.toml  quick_start.bat  quick_start.ps1  requirements-core.txt  requirements.txt  sample_metrics.json  setup.py  simple_philips_test.py  simple_test.py  simple_test_enhanced.py  streamlit_dashboard_enhanced.py  test_philips_access.py  test_synergy_base.py  view_philips_metrics.py
metrics/.github/: copilot-instructions.md
metrics/dags/: github_metrics_dag.py
metrics/github_metrics/: __init__.py  collectors.py  collectors_new.py  config.py  dashboard.py  metrics.py  utils.py
