[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-metrics"
version = "1.0.0"
description = "GitHub Metrics Collection System for DORA metrics, PR analysis, and productivity tracking"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["github", "metrics", "dora", "devops", "airflow", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "apache-airflow>=2.8.0",
    "PyGithub>=2.1.1",
    "pandas>=2.1.4",
    "numpy>=1.24.3",
    "plotly>=5.17.0",
    "dash>=2.16.1",
    "dash-bootstrap-components>=1.5.0",
    "python-dateutil>=2.8.2",
    "pydantic>=2.5.2",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-mock>=3.12.0",
    "black>=23.12.1",
    "flake8>=6.1.0",
    "pre-commit>=3.6.0",
]
postgres = [
    "psycopg2-binary>=2.9.9",
]

[project.urls]
Homepage = "https://github.com/your-org/github-metrics"
Repository = "https://github.com/your-org/github-metrics"
Documentation = "https://github.com/your-org/github-metrics#readme"
Issues = "https://github.com/your-org/github-metrics/issues"

[project.scripts]
github-metrics = "github_metrics.cli:main"

[tool.setuptools]
packages = ["github_metrics"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
